# SameGameSFCSmall2

./: Cargo.toml  README.md
.cargo/: config.toml
asset/: zobrist_board.in
examples/: dedup_board.rs  gen_board.rs  solve.rs  solve_all.rs  zobrist_table.rs
src/: action.rs  array.rs  asset.rs  bitop.rs  board.rs  bounded.rs  cmp.rs  hash.rs  hint.rs  lib.rs  nonzero.rs  piece.rs  position.rs  rng.rs  score.rs  solver.rs  square.rs  zobrist.rs
